--- a/1/style.css
+++ b/1/style.css
@@ -1,6 +1,88 @@
 * {
 
-	margin: 4px;
+	margin: 0;
+	padding: 0;
+	
+}
+
+header {
+	
+	background-color: lightgreen;
+	text-align: center;
+	padding: 20px;
+	border-bottom: 2px solid black;
+	font-size: 20px;
+	visibility: hidden;
+	
+}
+
+footer {
+	
+	text-align: center;
+	background-color: pink;
+	font-size: 14px;
+	padding: 20px;
+	border-top: 2px solid black;
+	visibility: hidden;
+	
+}
+
+footer h2 {
+	
+	font-weight: normal;
+	
+}
+
+section {
+	
+	background-color: lightblue;
+	padding: 10px;
+	
+}
+
+section p {
+	
+	background-color: steelblue;
 	padding: 4px;
+	margin: 4px 0;
+	border: 1px solid darkblue;
+	
+}
+
+@media print {
+	
+	footer {
+		
+		visibility: visible;
+		
+	}
+	
+}
+
+@media screen and (min-width: 640px) {
+	
+	section {
+		
+		padding: 0;
+		
+	}
+	
+	section p {
+		
+		display: inline-block;
+		width: calc(33% - 18px);
+		margin: 4px;
+		
+	}
+	
+}
+
+@media screen and (min-width: 800px) {
+	
+	header {
+		
+		visibility: visible;
+		
+	}
 	
 }
