--- a/2/style.css
+++ b/2/style.css
@@ -1,6 +1,212 @@
+
 * {
 
-	margin: 4px;
-	padding: 4px;
+	margin: 0;
+	padding: 0;
+	font-size: 18px;
+	
+}
+
+img {
+	
+	height: 100px;
+	width: auto;
+	
+}
+
+header, section {
+	
+	margin: 16px;
+	width: 100%;
+	
+}
+
+header h1 {
+	
+	font-size: 50px;
+	
+}
+
+header p {
+	
+	color: dimgray;
+	
+}
+
+header div div p:first-of-type {
+	
+	color: black;
+	
+}
+
+header article {
+	
+	display: inline-block;
+	
+}
+
+header article * {
+	
+	display: inline-block;
+	vertical-align: top;
+	
+}
+
+header article h2 {
+	
+	font-size: 40px;
+	
+}
+
+header article p {
+	
+	vertical-align: top;
+	font-size: 14px;
+	margin-top: 2px;
+	
+}
+
+.stats {
+	
+	display: inline-block;
+	vertical-align: bottom;
+	margin-left: 16px;
+	margin-left: 30%;
+	
+}
+
+.stats div p {
+	
+	display: inline-block;
+	
+}
+
+section article * {
+	
+	display: inline-block;
+	vertical-align: middle;
+	
+}
+
+section article h3 {
+	
+	width: 8%;
+	
+}
+
+section article ul li {
+	
+	display: block;
+	
+}
+
+section article ul li:last-of-type {
+	
+	color: grey;
+	
+}
+
+section article ul {
+	
+	
+	margin-left: 3%;
+	margin-right: 6%
+	
+}
+
+section article img {
+	
+	margin-left: 14%;
+	margin-right: 14%;
+}
+
+section article div p:last-of-type {
+	
+	color: grey;
+	
+}
+
+hr {
+	
+	color: grey;
+	background-color: grey;
+	height: 2px;
+	margin-right: 16px;
+	
+}
+
+@media screen and (min-width: 800px) {
+	
+	header h1 {
+		
+		font-size: 54px;
+	
+	}
+	
+	.stats {
+		
+		margin-left: 35%;
+		
+	}
+	
+	section article h3 {
+	
+		width: 10%;
+	
+	}
+	
+	section article ul {
+	
+	
+		margin-left: 5%;
+		margin-right: 12%
+	
+	}
+	
+	
+}
+
+@media screen and (min-width: 1200px) {
+	
+	hr {
+		
+		display: none;
+		
+	}
+	
+	section {
+		
+		margin-left: 0;
+		margin-right: 0;		
+	}
+	
+	section article {
+		
+		display: inline-block;
+		width: calc( 14% );
+		text-align: center;
+		margin-top: 16px;
+		
+	}
+	
+	section article img, section article h3, section article ul li, section article div {
+		
+		display: block;
+		text-align: center;
+		
+	}
+	
+	section article img {
+		
+		margin: auto;
+		
+	}
+	
+	section article h3 {
+		
+		width: 100%;
+		
+	}
+	
 	
 }
