--- a/3/style.css
+++ b/3/style.css
@@ -1,6 +1,458 @@
 * {
 
-	margin: 4px;
+	margin: 0;
+	padding: 0;
+	
+}
+
+.container {
+	
+	width: 100%;
+	
+}
+
+.col-xs-1 {
+	
+	width: calc(100%/12);
+	
+}
+
+.col-xs-2 {
+	
+	width: calc(200%/12);
+	
+}
+
+.col-xs-3 {
+	
+	width: calc(300%/12);
+	
+}
+
+.col-xs-4 {
+	
+	width: calc(400%/12);
+	
+}
+
+
+.col-xs-5 {
+	
+	width: calc(500%/12);
+	
+}
+
+
+.col-xs-6 {
+	
+	width: calc(600%/12);
+	
+}
+
+
+.col-xs-7 {
+	
+	width: calc(700%/12);
+	
+}
+
+
+.col-xs-8 {
+	
+	width: calc(800%/12);
+	
+}
+
+
+.col-xs-9 {
+	
+	width: calc(900%/12);
+	
+}
+
+
+.col-xs-10 {
+	
+	width: calc(1000%/12);
+	
+}
+
+
+.col-xs-11 {
+	
+	width: calc(1100%/12);
+	
+}
+
+
+.col-xs-12 {
+	
+	width: calc(1200%/12);
+	
+}
+
+
+#hamburger {
+	
+	float: right;
+	color: grey;
+	margin: 10px;
+	
+}
+
+.logo {
+	
+	margin: 8px;
+	height: auto;
+	border: 1px solid black;
+	
+}
+
+main h1 {
+	
+	text-align: center;
+	
+}
+
+.soustitre {
+	
+	text-align: center;
+	border: 1px solid black;
+	height: auto;
+	margin: auto;
+	display: block;
+	margin-top: 14px;
+	
+}
+
+ul {
+	
+	display: none;
+	
+}
+
+h2 {
+	
+	margin: 12px 8px;
+	
+}
+
+h2 + p {
+	
+	margin-left: 24px;
+	margin-right: 24px;
+	
+}
+
+article {
+	
+	background-color: lightgrey;
+	border-radius: 4px;
+	border: 1px solid black;
+	margin-right: 50px;
+	
+}
+
+article img {
+
+	float: left;
+	margin: 20px 12px 0 12px;
+	border: 1px solid black;
+	
+}
+
+article {
+	
+	margin: 16px;
 	padding: 4px;
+	
+}
+
+article p {
+	
+	margin: 20px 12px;
+	
+}
+
+footer {
+	
+	text-align: center;
+	
+}
+
+@media screen and (min-width: 700px) {
+	
+	.col-sm-1 {
+	
+		width: calc(100%/12);
+	
+	}
+
+	.col-sm-2 {
+	
+		width: calc(200%/12);
+	
+	}
+
+	.col-sm-3 {
+	
+		width: calc(300%/12);
+	
+	}
+
+	.col-sm-4 {
+	
+		width: calc(400%/12);
+	
+	}
+	
+	.col-sm-5 {
+	
+		width: calc(500%/12);
+	
+	}
+	
+	.col-sm-6 {
+	
+		width: calc(600%/12);
+	
+	}
+	
+	.col-sm-7 {
+	
+		width: calc(700%/12);
+	
+	}
+	
+	.col-sm-8 {
+	
+		width: calc(800%/12);
+	
+	}
+	
+	.col-sm-9 {
+	
+		width: calc(900%/12);
+	
+	}
+	
+	.col-sm-10 {
+	
+		width: calc(1000%/12);
+	
+	}
+	
+	.col-sm-11 {
+	
+		width: calc(1100%/12);
+	
+	}
+	
+	.col-sm-12 {
+	
+		width: calc(1200%/12);
+	
+	}
+	
+	ul {
+	
+		display: block;
+		text-align: center;
+	
+	}
+	
+	ul li {
+		
+		display: inline-block;		
+		margin: 18px 5%;
+		width: 15%;
+		padding: 4px 8px;
+		border: 1px solid black;
+		border-radius: 15%;
+		
+	}
+	
+	section {
+		
+		margin-left: 10%;
+		
+	}
+	
+	i {
+		
+		display: none !important;
+		
+	}
+	
+	
+}
+
+@media screen and (min-width: 900px) {
+	
+	.col-md-1 {
+	
+		width: calc(100%/12);
+	
+	}
+
+	.col-md-2 {
+	
+		width: calc(200%/12);
+	
+	}
+
+	.col-md-3 {
+	
+		width: calc(300%/12);
+	
+	}
+	
+	.col-md-4 {
+	
+		width: calc(400%/12);
+	
+	}
+
+	.col-md-5 {
+	
+		width: calc(500%/12);
+	
+	}
+
+	.col-md-6 {
+		
+		width: calc(600%/12);
+	
+	}
+	
+	.col-md-7 {
+	
+		width: calc(700%/12);
+	
+	}
+
+	.col-md-8 {
+	
+		width: calc(800%/12);
+	
+	}
+
+	.col-md-9 {
+	
+		width: calc(900%/12);
+	
+	}
+	
+	.col-md-10 {
+	
+		width: calc(1000%/12);
+	
+	}
+
+	.col-md-11 {
+	
+		width: calc(1100%/12);
+	
+	}
+
+	.col-md-12 {
+	
+		width: calc(1200%/12);
+	
+	}
+	
+	article {
+	
+		display: inline-block;
+	
+	}
+	
+	article:last-of-type {
+		
+		margin-left: 25%;
+		
+	}
+	
+}
+
+@media screen and (min-width: 1200px) {
+	
+	.col-lg-1 {
+	
+		width: calc(100%/12);
+	
+	}
+
+	.col-lg-2 {
+	
+		width: calc(200%/12);
+	
+	}
+
+	.col-lg-3 {
+	
+		width: calc(300%/12);
+	
+	}
+	
+	.col-lg-4 {
+	
+		width: calc(400%/12);
+	
+	}
+
+	.col-lg-5 {
+	
+		width: calc(500%/12);
+	
+	}
+
+	.col-lg-6 {
+	
+		width: calc(600%/12);
+	
+	}
+	
+	.col-lg-7 {
+	
+		width: calc(700%/12);
+	
+	}
+
+	.col-lg-8 {
+	
+		width: calc(800%/12);
+	
+	}
+
+	.col-lg-9 {
+	
+		width: calc(900%/12);
+	
+	}
+	
+	.col-lg-10 {
+	
+		width: calc(1000%/12);
+	
+	}
+
+	.col-lg-11 {
+	
+		width: calc(1100%/12);
+	
+	}
+
+	.col-lg-12 {
+	
+		width: calc(1200%/12);
+	
+	}
+	
+	article:last-of-type {
+		
+		margin-left: 16px;
+		
+	}
 	
 }
